# hgvisualizer

./: CMakeLists.txt  README.MD
res/: app.config  rules.config
src/: allocator.cc  allocator.h  config.cc  config.h  layout.cc  layout.h  layout_cuda.cu  layout_cuda.h  main.cc  model.cc  model.h  ui.cc  ui.h
